# spacetraders

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: api-reference.md  crew-manifest.md  game-concepts.md  strategy.md
src/spacetraders/: __init__.py  client.py  config.py  fleet_registry.py  models.py  rate_limiter.py
src/spacetraders/api/: __init__.py  agent.py  contracts.py  fleet.py  mining.py  navigation.py
src/spacetraders/dashboard/: __main__.py  app.py
src/spacetraders/fleet/: __init__.py  __main__.py  _adapters.py  commander.py  events.py  missions.py  scheduler.py  ship_agent.py  state.py  strategy.py  system_intel.py
src/spacetraders/missions/: __init__.py  __main__.py  contractor.py  deploy_sentinels.py  drone_swarm.py  gate_builder.py  mining.py  ops.py  probe_scanner.py  router.py  runner.py  scanner.py  shipyard_scout.py  trade_routes.py  trader.py
src/spacetraders/web/: __init__.py  __main__.py  app.py  map_helpers.py
src/spacetraders/web/routes/: contracts.py  dashboard.py  fleet.py  intel.py  market.py  navigation.py
src/spacetraders/web/static/css/: style.css  system-map.css
src/spacetraders/web/static/js/: app.js
src/spacetraders/web/templates/: base.html  contract_detail.html  dashboard.html  fleet.html  intel.html  market.html  ship_detail.html  system_map.html  waypoint_detail.html
src/spacetraders/web/templates/components/: action_result.html  agent_header.html  cargo_table.html  cooldown_timer.html  ship_status.html
tests/: test_rate_limiter.py  test_trader.py
